# Research_And_Emerging_topics_Labs

./: README.md
Lab1/: dashboard.py  lab_1.ipynb  pyproject.toml
Lab1/processed_data/: capacity_by_company.csv  capacity_by_region.csv  plants_by_company.csv  plants_by_country.csv  steel_plants_cleaned.csv
Lab2/: lab_2.ipynb  pyproject.toml
Lab2/mlruns/0/: meta.yaml
Lab2/mlruns/774540170442601777/: meta.yaml
Lab2/mlruns/774540170442601777/106a0bcd5ec54c2788822bb4a634785b/: meta.yaml
Lab2/mlruns/774540170442601777/106a0bcd5ec54c2788822bb4a634785b/metrics/: cv_rmse_default  cv_rmse_mean  improvement_vs_default  test_mae  test_r2  test_rmse
Lab2/mlruns/774540170442601777/106a0bcd5ec54c2788822bb4a634785b/tags/: training_date
Lab2/mlruns/774540170442601777/194438b8caed47fa9114d033b694b703/: meta.yaml
Lab2/mlruns/774540170442601777/194438b8caed47fa9114d033b694b703/metrics/: cv_r2_mean  cv_r2_std  cv_rmse_mean  (+4 more)
Lab2/mlruns/774540170442601777/304b16ca6b304b60b6524aef3c1f8fe5/: meta.yaml
Lab2/mlruns/774540170442601777/625c80f14b6a4847b49d666d18cc38ce/: meta.yaml
Lab2/mlruns/774540170442601777/6ffc34652f244087ba880c90ca563ac7/: meta.yaml
Lab2/mlruns/774540170442601777/7b48e250ca984a46b0ae616954cbc0e3/: meta.yaml
Lab2/mlruns/774540170442601777/7f7ba164832a458a941abb074f20e249/: meta.yaml
Lab2/mlruns/774540170442601777/8fdd56fe56d1414fb9917b6b4e69a131/: meta.yaml
Lab2/models/: MODEL_CARD.txt  model_metadata.json
Lab3/: china_company_emissions_2020_2030.csv  china_emissions_summary.csv  china_plant_emissions_2020_2030.csv  lab_3.ipynb  pyproject.toml
(+138 files in other folders)
